<resources>
    <string name="app_name">CSE110</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="plus">plus</string>
    <string name="enter_cost">enter_cost</string>
    <string name="type_in_the_expense">type_in_the_expense</string>
    <string name="Delete">Delete</string>
    <string name="plus_sign">+</string>
    <string name="cost">Cost</string>
    <string name="expense">Type In The Expense</string>
    <string name="categoryName">Category</string>
    <string name="budgetDisplay">Budget</string>
    <string name="type_in_the_list_to_create">Type in the list to create</string>
    <string name="expenses">Expenses</string>
    <string name="welcome">Welcome Back</string>
    <string name="totalBudget">Total Budget:</string>
    <string name="totalExpenses">Total Expenses:</string>

    <!-- Strings used for login -->
    <string name="userName">User name</string>
    <string name="password">Password</string>
    <string name="signIn">Sign in</string>
    <string name="signUpPrompt">Don\'t have an account? Sign up</string>
    <string name="signUp">Sign up</string>

    <!-- Header name strings -->
    <string name="expensesList">Expenses List</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="graphs">Graphs</string>
    <string name="sign_out">Sign out</string>
    <string name="account">Account</string>
    <string name="edit_profile">Edit profile</string>
    <string name="enable_notifications">Enable notifications</string>
    <string name="meet_the_team">Meet the team</string>
    <string name="about_us">About us</string>
    <string name="delete_account">Delete account</string>
    <string name="change_password">Change password</string>
    <string name="categories_list">Your Categories</string>
    <string name="type_category_name">Type Category name</string>
    <string name="type_category_name_updated">Type category name</string>
    <!-- nav bar strings -->
    <string name="title_home">Home</string>
    <string name="title_lists">Lists</string>
    <string name="title_graphs">Graphs</string>
    <string name="title_history">History</string>
    <string name="title_settings">Settings</string>

    <!-- Meet the team strings -->
    <string name="leland">Leland Long - Project Manager</string>
    <string name="erdong">Erdong Wang - Software Architect</string>
    <string name="minxuan">Minxuan Liu - Senior System Analyst</string>
    <string name="fan">Fan Ding - Software Development Lead</string>
    <string name="jack">Jack Sun - Database Specialist</string>
    <string name="brenton">Brenton Porter - Quality Assurance Lead</string>
    <string name="thuycam">Thuycam Nguyen - Algorithm Specialist</string>
    <string name="peter">Peter Gonzalez - Algorithm Specialist</string>
    <string name="isaac">Isaac Bi - User Interface Specialist</string>
    <string name="kriti">Kriti Jain - Business Analyst</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
