<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:orientation="horizontal"
    android:backgroundTint="@color/white"
    android:background="@color/white">

    <TextView
        android:id="@+id/category_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingStart="10sp"
        android:paddingTop="5sp"
        android:text="@string/categoryName"
        android:fontFamily="@font/semibold"
        android:textSize="16sp"
        android:textColor="@color/darkGrey"/>

    <TextView
        android:id="@+id/history_budget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:paddingTop="5sp"
        android:paddingLeft="50sp"
        android:textSize="12sp"
        android:text="@string/budgetDisplay"
        android:textColor="@color/green"
        android:fontFamily="@font/semibold" />

    <TextView
        android:id="@+id/history_expenses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingEnd="15sp"
        android:fontFamily="@font/semibold"
        android:paddingTop="5sp"
        android:text="@string/expenses"
        android:textColor="@color/red"
        android:textSize="12sp"
        android:layout_alignParentRight="true"/>


</LinearLayout>