<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGrey">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <include
            android:id="@+id/settings_bar_layout"
            layout="@layout/settings_bar" />


        <TextView
            android:id="@+id/account_text"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:text="@string/account"
            android:layout_marginLeft="15dp"
            android:textColor="@color/gradientDark"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/change_password_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_password"
            android:fontFamily="@font/semibold"
            android:textColor="@color/black"
            android:background="@color/white"
            android:shadowRadius="1"
            android:shadowColor="#000000"
            android:shadowDx="1"
            android:shadowDy="1"/>

        <Button
            android:id="@+id/delete_account_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_account"
            android:background="@color/white"
            android:fontFamily="@font/semibold"
            android:textColor="@color/black"
            android:layout_marginTop="10sp"
            android:shadowRadius="1"
            android:shadowColor="#000000"
            android:shadowDx="1"
            android:shadowDy="1"/>

        <TextView
            android:id="@+id/about_us_text"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:text="@string/about_us"
            android:textSize="16dp"
            android:layout_marginLeft="15dp"
            android:textColor="@color/gradientDark"/>

        <Button
            android:id="@+id/meet_the_team_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/meet_the_team"
            android:background="@color/white"
            android:fontFamily="@font/semibold"
            android:textColor="@color/black"
            android:shadowRadius="1"
            android:shadowColor="#000000"
            android:shadowDx="1"
            android:shadowDy="1"/>

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:itemIconTint="@color/darkGrey"
        app:itemTextColor="@color/darkGrey"
        android:background="?android:attr/windowBackground"
        app:menu="@menu/bottom_nav_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>