<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Category">


    <include
        android:id="@+id/categoryBar"
        layout="@layout/category_bar"
        app:layout_constraintBottom_toTopOf="@+id/Expenses" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:background="#26C6DA"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/Expenses"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categoryBar"
        app:layout_constraintVertical_bias="0.0">


        <EditText
            android:id="@+id/ExpenseName"
            android:layout_width="235dp"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:autofillHints=""
            android:ems="10"
            android:gravity="top|left"
            android:hint="@string/expense"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/ExpenseCost"
            android:layout_width="105dp"
            android:layout_height="match_parent"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/cost"
            android:inputType="numberDecimal" />

        <Button
            android:id="@+id/AddToList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:background="#00BCD4"
            android:gravity="bottom|left"
            android:text="@string/plus_sign"
            android:textColor="#0C0C0C"
            android:textSize="20sp" />

    </LinearLayout>

    <ListView
        android:id="@+id/Expenses"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0"
        android:background="#FFFFFF"
        android:cacheColorHint="#FFFFFF"
        android:clickable="true"
        android:focusable="true"
        android:longClickable="true"
        android:smoothScrollbar="true" />

</LinearLayout>